public/css/main.css
@import "variables.css";
@import "nav.css";
@import "bills.css";
@import "buttons.css";
@import "forms.css";
@import "info.css";
@import "alerts.css";
@import "text.css";
@import "welcome.css";

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
}

body {
    background-color: var(--color-grey-light-1);
    font-family: 'Work Sans', sans-serif;
}

.container {
    height: 100vh;
    display: grid;
    grid-template-columns: 30rem 1fr;
    grid-template-rows: auto 3fr;
}

nav {
    grid-row: span 2;
    font-size: var(--font-small);
}

a {
    text-decoration: none;
}

ul {
    list-style-type: none;
}

@media (max-width: 1200px) {
    html {
        font-size: 58%;
    }
}

@media (max-width: 992px) {
    html {
        font-size: 55%;
    }
}

@media (max-width: 768px) {
    html {
        font-size: 52%;
    }

    .container {
        grid-template-columns: 1fr;
        grid-template-rows: auto 3fr;
    }

    nav {
        grid-row: span 1;
    }
}

@media (max-width: 576px) {
    html {
        font-size: 52%;
    }
}

